2022-02-11 1.6.4 Prompt for Python version upon install (use python2 for NetStream)

2021-03-05 1.6.2 Fix broken password 

2021-01-24 1.6.1 Update install scripts

2021-01-16 1.6.0 DSM 7 support
                 Use ffmpeg for everything, add switch for using legacy recording on http

2020-12-20 1.5.1 Fix mobile version, update themes
                 Add support for portable databases (for Docker usage)

2020-12-14 1.5.0 First docker release

2019-09-23 1.4.3 Fix for EPG import from http://xmltv.xmltv.se

2019-02-12 1.4.2 Fixed search in EPG chart view
                 Query support in EPG chart view (/epgchart&spiegel%20tv will highlight corresponding events)

2019-01-13 1.4.1 Records can now be deleted from EPG chart view

2019-01-12 1.4.0 Added new switch to handle concurrent recording (if but one stream per device available)
                 Better records handling and cancelling in EPG list view
                 Several fixes

2018-12-31 1.3.9 Keywords for creating automatic records on EPG import

2018-10-31 1.3.8 Edit records from mobile view

2018-10-30 1.3.7 Fixed mobile record toggle switch

2018-10-17 1.3.6 Better EPG overlays
                 New placeholder %fulltitle% added

2018-08-25 1.3.5 Adding more placeholders, delta before and after an EPG record

2018-03-11 1.3.4 Failsafe delta for ffmpeg: do not restart if but X seconds remain

2018-02-27 1.3.3 Extending TV Browser support (plugin v.1.0.3 required)
                 Events can also be canceled

2018-02-25 1.3.2 Extending TV Browser support (with newest plugin)
                 Events to be recorded are marked in TVBrowser and shown in tree view

2018-02-13 1.3.1 Fix for TV Browser records
                 Fix for importing m3u files with utf8bom encoding

2017-01-19 1.3.0 Support for TV-Browser added. Please see tvbrowser.org for more details
                 GZip packed local XMLTV files can be read
                 Password-free IP mask added into advanced configuration