@@ -1,3 +1,5 @@
+2024-12-24 1.6.6 Update channel urls from a remote file
+
 2022-02-11 1.6.4 Prompt for Python version upon install (use python2 for NetStream)
 
 2021-03-05 1.6.2 Fix broken password 
